--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,11 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <div id="header">
+        <h1>Cabecera/h1>
+        
+
+    </div>
     <h1>Hola, Mauricio nose</h1>
     <p>otro cambio</p>
 </body>
