Finalizada la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,13 @@
 </head>
 <body>
     <div id="header">
-        <h1>Cabecera/h1>
-        
+        <h1>Cabecera</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="blogpost.html">Blog</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
 
     </div>
     <h1>Hola, Mauricio nose</h1>
