--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>Hola, Mauricio nose</h1>
-    <p>otro cambio</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis repellat placeat esse qui optio blanditiis ad. Numquam provident magni, iste omnis totam ex, est corporis, similique odit quasi fugit dolore!</p>
 </body>
 </html>
