--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="blogpost.html">Blog</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="quienessomos.html">Quienes Somos</a></li>
             </ul>
 
     </div>
