--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <li><a href="blogpost.html">Blog</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="quienessomos.html">Quienes Somos</a></li>
+                <li><a href="nose.html">No se</a></li>
             </ul>
 
     </div>
